[#191] Updated to new string/numeric field system