@@ -1,11 +1,12 @@
 package net.zscript.javaclient.commandbuilderapi.defaultcommands;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 import java.util.stream.Stream;
 
+import static java.util.Collections.emptyList;
 import static net.zscript.javaclient.commandbuilderapi.nodes.CommandSequenceNode.ifFails;
 import static net.zscript.javaclient.commandbuilderapi.nodes.CommandSequenceNode.ifSucceeds;
+import static net.zscript.javaclient.commandpaths.FieldElement.fieldOf;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.of;
 
@@ -88,7 +89,7 @@ class ConditionalNodeTest {
     @ParameterizedTest
     @MethodSource
     public void shouldParseResponses(final ZscriptCommandNode<DefaultResponse> node) {
-        final ZscriptFieldSet fieldSet = ZscriptFieldSet.fromMap(Collections.emptyList(), Map.of((byte) 'A', 12));
+        final ZscriptFieldSet fieldSet = ZscriptFieldSet.fromList(emptyList(), List.of(fieldOf((byte) 'A', 12)));
         DefaultResponse       br       = node.parseResponse(fieldSet);
         assertThat(br.getField((byte) 'A')).hasValue(12);
         assertThat(node.getResponseType()).isEqualTo(DefaultResponse.class);
